SetShardVersion can return unknown error code while refreshing from config server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: None
    • Minor Change
    • ALL
    • Sharding 2019-08-26, Sharding 2019-09-23
    • 24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      and this can cause the mongos/config server not to retry. Example error from build failure:

      2019-02-26T23:03:43.155+0000 E QUERY    [js] Error: drop failed: {
      	"ok" : 0,
      	"errmsg" : "could not refresh metadata for test.jstests_multikey_geonear with requested shard version 0|0||000000000000000000000000, stored shard version is 1|3||5c75c5c93c4a30e466e75ced :: caused by :: InterruptedAtShutdown: interrupted at shutdown",
      	"code" : 8,
      	"codeName" : "UnknownError",
       [conn39] end connection 127.0.0.1:40655 (0 connections now open)
      	"operationTime" : Timestamp(1551222223, 5),
      	"$clusterTime" : {
      		"clusterTime" : Timestamp(1551222223, 5),
      		"signature" : {
      			"hash" : BinData(0,"AAAAAAAAAAAAAAAAAAAAAAAAAAA="),
      			"keyId" : NumberLong(0)
      		}
      	}
      }
      

      One way to fix this is to change all paths that "return false" to assert with code.

            Assignee:
            Kevin Pulo
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: