SERVER-39862 make setShardVersion pass along error code